[package]
name = "ab-av1"
version = "0.10.1"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2024"
description = "AV1 encoding with fast VMAF sampling"
repository = "https://github.com/alexheretic/ab-av1"
keywords = ["av1", "vmaf"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
blake3 = "1.8.2"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "3.0.3"
clap_complete = "4.5.54"
console = "0.15.11"
dirs = "6"
env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }
fastrand = "2"
ffprobe = "0.4"
futures-util = "0.3.31"
humantime = "2.2"
indicatif = "0.17"
infer = { version = "0.19", default-features = false }
log = "0.4.27"
pin-project-lite = "0.2.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-escape = "0.1.5"
sled = "0.34.7"
time = { version = "0.3", features = ["parsing", "macros"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-process-stream = "0.4"
tokio-stream = "0.1"

[profile.release]
lto = true
opt-level = "s"
strip = true

[lints.rust]
unused_crate_dependencies = "deny"
